
An entry should be made for _every_ commit to the repository.
The entries in this file will be used when creating the README
for new versions, so keep that in mind when writing the
description.

The form of an entry should be:

Name: 
Date:
Tag: <post-commit CVS tag>
Description:
----------------------------------------------------------------------
Name: Dave MacQueen
Date: 2000/04/09 14:00 EDT
Tag: dbm-20000410-Version_110_27
Description:

1. Updated src/compiler/TopLevel/main/version.sml to version 110.27

2. Updated src/config/version to 110.27

3. New boot files!

----------------------------------------------------------------------
Name: Allen Leung
Date: 2000/04/09 19:09:00 EST
Tag: leunga-20000409-misc
Description:

1.  Yet another fix for x86 assembly for idivl, imull, mull and friends.

2.  Miscellaneous improvements to MLRISC (unused in sml/nj)  

----------------------------------------------------------------------
Name: Stefan
Date: 2000/04/07 10:00:00 EDT
Tag: monnier-20000406-branch-handling
Description:

Improved handling of branches (mostly those generated from
polymorphic equality), removed switchoff and changed the
default optimization settings (more cpsopt and less flintopt).

----------------------------------------------------------------------
Name: Allen Leung
Date: 2000/04/06 01:30:00 EST
Tag: leunga-20000406-peephole-x86-SSA-2
Description:

   Forgot a few files.  

----------------------------------------------------------------------
Name: Allen Leung
Date: 2000/04/06 00:36:00 EST
Tag: leunga-20000406-peephole-x86-SSA
Description:

1.  New Peephole code

2.  Minor improvement to X86 instruction selection

3.  Various fixes to SSA and machine description -> code translator

----------------------------------------------------------------------
Name: Matthias Blume
Date: 2000/04/05 12:30:00 JST
Tag: blume_main_v110p26p2_3
Description:

This update just merges three minor cosmetic updates to CM's sources